@@ -136,6 +136,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5679): format number on timeanddate() calls for fa: hi: bn:.
 * (bug 5751) Updates to Portuguese localisation files
 * (bug 5741) Introduce {{NUMBEROFUSERS}} magic word
+* (bug 93) <nowiki> tags and tildes in templates
 
 == Compatibility ==
 
